--- a/src/com/autonavi/data/test/fxui/FXMLDocument.fxml
+++ b/src/com/autonavi/data/test/fxui/FXMLDocument.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.*?>
 
 <BorderPane xmlns:fx="http://javafx.com/fxml/1"  fx:controller="com.autonavi.data.test.fxui.FXMLDocumentController"
-            id="MainBorderPane">
+            fx:id="MainBorderPane">
     <top>
         <MenuBar>
             <Menu fx:id="FileMenu" text="File">
@@ -112,7 +112,7 @@
                                     <RowConstraints fillHeight="true" vgrow="ALWAYS"  />
                                     <RowConstraints fillHeight="false" vgrow="NEVER" />  
                                 </rowConstraints>
-                                <TableView fx:id="DataFlowSnapshotTableView" GridPane.rowIndex="0" >
+                                <TableView fx:id="DataFlowSnapshotTableView" GridPane.rowIndex="0">
                                     <columns>
                                         <TableColumn text="Name" editable="false">
                                             <cellValueFactory>
